Change title and navigation brand in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>NEXUS TRACKER | V12</title>
+    <title>Workout Log</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
 
@@ -190,7 +190,7 @@
     <div class="bg-animation"></div>
 
     <nav class="top-nav">
-        <div class="nav-brand">NEXUS <span>V12</span></div>
+        <div class="nav-brand">Log<span>3000</span></div>
         <div class="nav-links nav-links-desktop">
             <button class="glitch-btn active" id="nav-tracker" data-text="WORKOUTS" onclick="switchView('tracker')">WORKOUTS</button>
             <button class="glitch-btn" id="nav-journal" data-text="JOURNAL" onclick="switchView('journal')">JOURNAL</button>
